# agentcompany

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.monitoring.yml  docker-compose.plane.yml  docker-compose.yml
services/agent-runtime/: Dockerfile  alembic.ini  coverage.json  pyproject.toml  requirements.txt
services/agent-runtime/alembic/: env.py
services/agent-runtime/alembic/versions/: 001_initial.py
services/agent-runtime/app/: config.py  dependencies.py  logging_config.py  main.py
services/agent-runtime/app/adapters/: __init__.py  base.py  mattermost.py  meilisearch_adapter.py  outline.py  plane.py  registry.py  types.py
services/agent-runtime/app/api/: agents.py  approvals.py  companies.py  events.py  metrics.py  roles.py  router.py  search.py  tasks.py  webhooks.py
services/agent-runtime/app/core/: database.py  events.py  middleware.py  monitoring.py  security.py
services/agent-runtime/app/engine/: __init__.py  agent_loop.py  agent_manager.py  context_manager.py  cost_tracker.py  engine_service.py  heartbeat.py  memory.py  state_machine.py  tool_definitions.py  tool_registry.py  trigger_consumer.py
services/agent-runtime/app/models/: __init__.py  agent.py  approval.py  base.py  company.py  event.py  role.py  task.py  token_usage.py
services/agent-runtime/app/schemas/: agent.py  (+5 more)
services/agent-runtime/tests/: conftest.py  test_agents.py  test_auth.py  test_companies.py  test_cost_tracker.py  test_llm_adapters.py  test_roles.py  test_search.py  test_state_machine.py  test_tasks.py  test_tool_adapters.py  test_webhooks.py
(+138 files in other folders)
